--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -17,9 +17,14 @@
 
 }
 .headerNameBoxen{
-    font-size: 22px;
+    font-size: 17px;
     line-height: 1.25rem;
     font-weight: 600;
+    /*margin-bottom: -3px;*/
+    /*display: flex;*/
+    /*align-items: center;*/
+    padding-top: 5px;
+    margin-bottom: 4px;
 
 }
 .headerUlNaven{
@@ -33,8 +38,28 @@
 .headerNameen{
     /*display: flex;*/
     /*align-items: center;*/
-    padding-top: 7px;
+    /*padding-top: 7px;*/
+    display: flex;
+    /*align-items: center;*/
 
+}
+.headerUlNavNameBoxenMobile{
+    display: flex;
+}
+.headerIconA{
+    width: 55px;
+    height: 55px;
+    border-radius: 15px;
+    background: linear-gradient(135deg, #9b5cff, #ff4f9a, #ffb347);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: black;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    margin-right: 10px;
+    /*margin-bottom: 5px;*/
 }
 .headerUlNaven a{
     text-decoration: none;
@@ -82,7 +107,15 @@
     max-height: 500px; /* یا هر مقداری که محتوای شما نیاز دارد */
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
+    .headerIconA{
+        width: 50px;
+        height: 50px;
+
+    }
+    .headerNameen{
+        margin-top: 5px;
+    }
     .headerUlenMobileBox{
         display: block;
     }
@@ -155,9 +188,12 @@
         font-size: 0.75rem;
         line-height: 1rem;
 
-        margin-top: -5px;
+        /*margin-top: -5px;*/
 
         color: rgba(255, 255, 255, 0.6);
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*padding-top: 3px;*/
 
 }
 .headerWrapperen header{
