--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -1,18 +1,5 @@
 .headerWrapperen{
     direction: ltr;
-    width: 100%;
-    min-height: 100vh;
-
-    /* پس‌زمینه گرادیانت */
-    background: linear-gradient(to bottom, #0f172a, #061021);
-
-    /* رنگ متن */
-    color: white;
-
-    /* آنتی الیاس برای فونت‌ها */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    height: auto;
 
 
 }
@@ -202,7 +189,9 @@
     align-content: center;
     align-items: center;
 
-    position: sticky;
+    position: fixed;
+    right: 0;
+    left: 0;
     top: 0;
     z-index: 50;
 
