--- a/src/Components/Hero/Hero.module.css
+++ b/src/Components/Hero/Hero.module.css
@@ -129,6 +129,7 @@
     padding: 20px;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1.5rem;            /* فاصله بین آیتم‌ها */
     font-size: 1rem;     /* text-xs */
     color: rgba(255, 255, 255, 0.7);
